# fdtd-electrodynamics

./: .gitignore  CMakeLists.txt  LICENSE  README.md
modules/: config.h.in  config_old.h  configure.cmake  macro.cmake  vars.cmake
src/: CMakeLists.txt  version.h
src/visualizer/: CMakeLists.txt  emfield.cpp  emfield.h  main.cpp  optics.cpp  optics.h  renderer.cpp  renderer.h  visual_field.cpp  visual_field.h  window.cpp  window.h
